# Robot-Mapping-Estimation-Interaction

./: README.md
src/executive/: CMakeLists.txt  package.xml
src/executive/src/: goal_publisher_node.cpp  waypoints_publisher.cpp
src/gui/: CMakeLists.txt  package.xml
src/gui/include/gui/: gui.h
src/gui/src/: gui_node.cpp
src/gui/src/gui/: gui.cpp
src/interprocess_communication/: CMakeLists.txt  package.xml
src/interprocess_communication/include/interprocess_communication/: interprocess_communication.h
src/interprocess_communication/src/: interprocess_communication_node.cpp  interprocess_communication_publisher.cpp
src/interprocess_communication/src/interprocess_communication/: interprocess_communication.cpp
src/launch/: amr_sim.launch  robot.launch
src/localization/: .package.xml.swp  CMakeLists.txt  package.xml
src/localization/include/localization/: ekf_localization.h
src/localization/src/: ekf_localization_node.cpp
src/localization/src/localization/: ekf_localization.cpp
src/mapper/: CMakeLists.txt  package.xml
src/mapper/include/mapper/: ocmap.h  ocmap_wrapper.h
src/mapper/src/: oc_grid_publisher_node.cpp
src/mapper/src/mapper/: ocmap.cpp  ocmap_wrapper.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/include/navigation/: navigator.h
src/navigation/msg/: Trajectory.msg
src/navigation/src/: navigation_node.cpp
src/navigation/src/navigation/: navigator.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/include/perception/: perception.h
src/perception/msg/: Observation.msg  Observations.msg
src/perception/src/: perception_node.cc
src/perception/src/perception/: perception.cc
src/simulator/: CMakeLists.txt  package.xml
src/simulator/include/simulator/: simulator.h
src/simulator/launch/: amr_sim.launch
src/simulator/src/: landmarks_publisher.cpp  obstacles_publisher.cpp  simulator_node.cpp  simulator_send_go.cpp  simulator_send_stop.cpp
src/simulator/src/simulator/: simulator.cpp
